# AGSA-AUTOMATED-MULTI-LANG-

./: .env.example  .firebaserc  .gitignore  INTEGRATION_COMPLETE.md  KYC_UI_IMPROVEMENTS.md  README.md  THIRD-PARTY-LICENSES.md  index.html  pyproject.toml  tailwind.config.ts
backend/: API_STATUS_REPORT.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.py
backend/agsa/: asgi.py  settings.py  urls.py  wsgi.py
backend/agsa_gov_agent_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  (+1 more)
backend/chat/: ai_service.py  models.py  serializers.py  urls.py  views.py
backend/digilocker/: __init__.py  client.py  client_db.py  exceptions.py  models.py
backend/schemes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tests/: README.md  __init__.py  cleanup_orphaned_docs.py  debug_django_context.py  diagnose_api_key.py  fix_api_key.py  populate_sample_data.py  reload_ai_service.py  simple_test.py  test_api.py  test_chat_api.py  test_chat_endpoint.py  test_chat_performance.py  test_complete_flow copy.py  test_complete_flow.py  test_document_listing.py  test_dynamic_api.py  test_frontend_backend_integration.py  test_frontend_build.py  test_frontend_fix.py  test_gemini_api.py  test_gemini_direct.py  test_http_simulation.py  test_intelligent_chat.py  test_upload.py  test_view_direct.py  test_view_scenario.py  user_journey_demo.py
backend/utils/: logging_filters.py  safe_logging.py  secure_error_handler.py
src/: App.tsx  (+1 more)
(+54 files in other folders)
